# pelican-data-files

./: LICENSE  README.md  setup.cfg  setup.py  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
pelican/plugins/data-files/: __init__.py  file_formats.py  generators.py
pelican/plugins/data_files/: __init__.py  fetch_data_files.py  file_formats.py  generator.py  generators.py  parser.py
pelican/plugins/data_files/tools/: cli.py  fetch.py
tests/: test_parser.py
