[metadata]
name = pelican-data-files
version = 1.1.0
url = https://github.com/LucasVanHaaren/pelican-data-files
# download_url = https://github.com/LucasVanHaaren/pelican-data-files
author = vhash
author_email = 29121316+LucasVanHaaren@users.noreply.github.com
license = MIT
license_files = LICENSE
description = Pelican plugin that allows to load data from files like JSON or YAML.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
keywords = pelican, pelican-plugin, data
classifiers =
	Framework :: Pelican :: Plugins
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License

[options]
packages = 
	pelican.plugins.data_files
	pelican.plugins.data_files.tools

zip_safe = true
python_requires = >= 3.6
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    pelican>=4.5

[options.extras_require]
dev =
	flake8
    black
    invoke
	twine

[options.entry_points]
console_scripts =
    pelican-data-files-fetch = pelican.plugins.data_files.tools.fetch:main

[flake8]
max-complexity = 10
max-line-length = 88
exclude = 
	__pycache__,
	.env,
	.git,
	build,
	dist
